// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`STextField renders empty text field 1`] = `
<div class="s-input"><span class="s-input__label">Text field</span> <input type="text" class="s-input__input">
  <!---->
  <!---->
</div>
`;

exports[`STextField renders text field with text 1`] = `
<div class="s-input"><span class="s-input__label s-input__label--aside">Text field</span> <input type="text" class="s-input__input">
  <!---->
  <!---->
</div>
`;
